fixed join overwritting issue, and wrapping issue

--- a/src/components/Rides/RideItem/RideDetails.module.css
+++ b/src/components/Rides/RideItem/RideDetails.module.css
@@ -21,6 +21,7 @@ h3 {
     padding: 0;
     margin: 0;
     max-width: 10rem;
+    word-wrap: break-word;
 }
 
 .seats {
